[package]
name = "resm"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Remote Server Management tools"
license = "MIT"

[dependencies]
async-recursion = "1.0.5"
chrono = "0.4.29"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
git2 = "0.18.0"
glob = "0.3.1"
openssh = "0.9.9"
openssh-sftp-client = { version = "0.13.6", features = ["openssh"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
zip = "0.6.6"
