[package]
name = "resm"
version = "0.1.1"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Remote Server Management tools"
license = "MIT"
documentation = "https://docs.rs/resm"
repository = "https://github.com/ichigo-dev/resm"

[dependencies]
async-recursion = "1.0.5"
chrono = "0.4.29"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
git2 = "0.18.0"
glob = "0.3.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
ssh = "0.1.4"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
zip = "0.6.6"
